# bamslice

./: .gitignore  Cargo.toml  Makefile  README.md  example.nf  flamegraph.sh
.github/workflows/: audit.yml  ci.yml  coverage.yml  performance_benchmark.yml  release.yml
benches/: bamslice_bench.rs
benches/history/: results.csv  results.txt
conda-recipe/: build.sh  meta.yaml
docs/: merge-fidelity.md
scripts/: bench-track.sh  coverage.sh  flamegraph.sh
src/: fastp.rs  fastp_merge.rs  lib.rs  main.rs
tests/: fastp_test.rs  integration_test.rs  merge_fastp_json_test.rs
tests/fixtures/: false-positive-test.bam  false_positive_ref_id.bam  fastp_chunk1.json  fastp_chunk2.json  fastp_se_chunk1.json  fastp_se_chunk2.json  ont-test1.bam  single_end_test_small.bam  tmp
